cmake_minimum_required(VERSION 3.15)
project(Graduation)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
aux_source_directory(${PROJECT_SOURCE_DIR} SRC_LIST)
include_directories(thirdparty/opennurbs)
include_directories(thirdparty/eigen)
if(CMAKE_HOST_SYSTEM_NAME MATCHES "Windows")
    message(STATUS "Building for windows")
    find_library(OpenNurbs opennurbsStatic.lib ./thirdparty/opennurbs/build/Debug)
    find_library(Z zlib.lib ./thirdparty/opennurbs/build/zlib/Debug)
    MESSAGE(STATUS ${OpenNurbs})
    MESSAGE(STATUS ${Z})
    link_libraries(${OpenNurbs})
    link_libraries(${Z})
    add_executable(${CMAKE_PROJECT_NAME} ${SRC_LIST})
elseif(CMAKE_HOST_SYSTEM_NAME MATCHES "Linux")
    MESSAGE(STATUS "Building for linux")
endif()